# vale-village-v3

./: .contract.sha256  .gitignore  AGENTS.md  Cargo.toml  MANIFEST.md  PLAYING.md  README.md  STATE.md  audit_execution.txt  audit_status.txt  build.rs
.memory/: STATE.md
docs/: AI_ORCHESTRATION_PLAYBOOK.md  MANUAL.md  QUICK_REFERENCE.md  SPEC_TEMPLATE.md  STATE_TEMPLATE.md  SUB_AGENT_PLAYBOOK.md  spec.md
experiments/: b1_redux.py  battery_harness.py
ironclad/: Cargo.toml
objectives/: ui-djinn-sprite-foreman.md  ui-djinn-sprite-rotation.md
orchestration/: FOREMAN_PLAYBOOK.md  GAME_DIRECTOR_AGENT.md  ORCHESTRATOR_AGENT.md  run-stack.sh
scripts/: build-wasm.sh  checkpoint-state.sh  clamp-scope.sh  convert_data.py  hook-agent-guard.sh  hook-contract-integrity.sh  hook-session-freshness.sh  install-hooks.sh  launch-lane.sh  restore-checkpoint.sh  run-gates.sh
src/: game_loop.rs  game_state.rs  lib.rs  main.rs  starter_data.rs
status/: ability-summary.json  asset-inventory.json  audit-wave2.md  audit-wave3.md  bevy-render-audit.txt  booklet-changeset-march22.md  booklet-update-patch-march22.md  data-inventory.json  dispatch-state.yaml  draft-djinn-manifest.toml  draft-enemy-manifest.toml  enemy-sprite-mapping.json  hardcoded-assets.txt  harden-verification-wave-8.md  integration.md  ironclad-retrofit-plan.md  player-trace-wave-1-3.md  player-trace-wave-10.md  player-trace-wave-11.md  player-trace-wave-4.md  player-trace-wave-5.md  player-trace-wave-6.md  player-trace-wave-7.md  visual-ci-workflow.yml
tests/: graduation.rs
tools/: pixellab_pipeline.py
(+189 files in other folders)
